changes to app to add new postion update endpoint, and created new utils/position_updater
